Edited wiki page HowToRunJavaDemo through web user interface.

--- a/wiki/HowToRunJavaDemo.wiki
+++ b/wiki/HowToRunJavaDemo.wiki
@@ -1,4 +1,46 @@
-This page explains how to build and run the demo of the Java version of libphonenumber.
+=Steps on running the Java Demo=
+Shaopeng Jia, Match 8th, 2011
 
-*Under construction*
+==About this document==
+This document explains how to build and run the demo of the Java version of libphonenumber from the command line using Google App Engine. By following the instructions here, you could build a demo running against any revision of the Java code by supplying a jar file you build on your own or downloaded from the [http://code.google.com/p/libphonenumber/downloads/list Downloads page].
 
+==Detailed steps==
+===1. Installing Google App Engine===
+Following the [http://code.google.com/appengine/docs/java/gettingstarted/installing.html instructions] to install the Java SDK of Google App Engine, assuming cxlipse and the Google Plugin are not used.
+
+===2. Checkout the demo code===
+Checkout out the demo directory if you haven't done so:
+
+svn checkout http://libphonenumber.googlecode.com/svn/trunk/java/demo libphonenumber-read-only
+
+Place the demo directory next to the unpacked appengine sdk directory. This document assumes it is named as appengine-java-sdk (you may want to rename the directory after unpacking).
+
+===3. Run the demo code ===
+
+First copy the jar file of libphonenumber to demo/war/WEB-INF/lib/. Then start the server:
+{{{
+cd demo
+ant runserver
+}}}
+This will start a server on you localhost, and you can try it out by pointing your browser to http://localhost:8080/
+
+If you get a warning from App Engine to ask you to upgrade your JRE to Java 1.6 or later, you might need to install Java 1.6 and point your JAVA_HOME to it. To see your current JAVA_HOME, use
+{{{
+echo $JAVA_HOME 
+}}}
+To see the list of JDKs currently installed, use
+{{{
+update-java-alternatives -l
+}}}
+To reset the JAVA_HOME, use
+{{{
+export JAVA_HOME=[path to Java 1.6 SDK]/jre
+}}}
+Now you should be able to use `ant runserver` to start the server on your localhost. 
+
+In case you want to upload the demo to a App Engine, follow the steps to [http://code.google.com/appengine/docs/java/gettingstarted/uploading.html register a application with App Engine] first. Then type the following command:
+{{{
+../appengine-java-sdk/bin/appcfg.sh update war
+}}}
+The demo will then be uploaded to `http://application-id.appspot.com/`
+ 
