Edited wiki page HowToIntegrateJavaVersionInYourMavenProject through web user interface.

--- a/wiki/HowToIntegrateJavaVersionInYourMavenProject.wiki
+++ b/wiki/HowToIntegrateJavaVersionInYourMavenProject.wiki
@@ -1,4 +1,4 @@
-How to Integrate the Java Version in Your Maven project
+=How to integrate the Java version in your Maven project=
 
 == Introduction ==
 
