--- a/wiki/HowToRunJavaDemo.wiki
+++ b/wiki/HowToRunJavaDemo.wiki
@@ -1,5 +1,5 @@
 = How to run the Java Demo=
-Shaopeng Jia, Match 8th, 2011
+Shaopeng Jia, March 8th, 2011
 
 ==About this document==
 This document explains how to build and run the demo of the Java version of libphonenumber, *from the command line* on *Linux* or *Mac*, using Google App Engine. By following the instructions here, you can build a demo running against any revision of the Java code by supplying a jar file you build on your own, or downloading one from the [http://code.google.com/p/libphonenumber/downloads/list Downloads page].
